# autopilot-rs

./: .$flow_chart.drawio.bkp  .SRCINFO  .gitignore  Cargo.toml  PKGBUILD  README.md  justfile
.github/workflows/: build.yml
.rpm/: autopilot-rs.spec
aur/: .SRCINFO
aur/git/: .SRCINFO
aur/release/: PKGBUILD
cli/: Cargo.toml
daemon/: Cargo.toml
daemon/src/: main.rs
daemon/src/conditions/: mod.rs  output_condition.rs  variable_condition.rs  wifi_condition.rs
daemon/src/directory/: mod.rs
daemon/src/job/: get.rs  mod.rs
daemon/src/logging/: mod.rs
daemon/src/tasks/: mod.rs
daemon/src/time/: init.rs  mod.rs
daemon/templates/: job.json
docs/: CONDITIONS.md  TROUBLESHOOTING.md
examples/: custom-condition.jsonc  disk-space-condition.jsonc  external-device-condition.jsonc  file-condition.jsonc  high_resource_log.jsonc  internet-condition.jsonc  low_battery_alert.jsonc  process-condition.jsonc
graphs/: flow_chart.drawio
json_schema/: schema.json
src/: main.rs
src/api/: handlers.rs  routes.rs  state.rs
src/autopilot/: mod.rs
src/cli/: create.rs  list.rs  mod.rs  remove.rs  serve.rs  status.rs  stop.rs
src/conditions/: and_condition.rs  bluetooth_condition.rs  command_condition.rs  custom_condition.rs  de_condition.rs  desktop_env_condition.rs  disk_space_condition.rs  external_device_condition.rs  fail_condition.rs  file_condition.rs  internet_condition.rs  logical_condition.rs  mod.rs  nor_condition.rs  or_condition.rs  output_condition.rs  power_condition.rs  process_condition.rs  resource_condition.rs  screen_condition.rs  time_condition.rs  variable_condition.rs  wifi_condition.rs
src/cron/: add.rs  init.rs  mod.rs
src/cross_platform/: get.rs  mod.rs
src/directory/: get.rs  mod.rs  set.rs
src/error/: mod.rs
src/fs/: get.rs  mod.rs  set.rs
src/job/: get.rs  mod.rs  set.rs
src/language/: en_us.rs  mod.rs
src/logging/: mod.rs
templates/: example-bluetooth-condition.jsonc  example-combined-conditions.jsonc  example-custom-condition-output.jsonc  example-time-condition-tolerance.jsonc  example-time-condition.jsonc  example-wifi-condition.jsonc  job.json  job.jsonc
wix/: License.rtf  main.wxs
(+15 files in other folders)
