[package]
name = "auto_pilot_rs-daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
colored = "3.0.0"
duct = "1.1.1"
flexi_logger = "0.31.7"
futures = "0.3.31"
log = "0.4.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
syslog = "7.0.0"
systemd = "0.10.1"
systemd-journal-logger = "2.2.2"
tokio = { version = "1.48.0", features = ["full"] }
tokio-cron-scheduler = "0.15.1"
